--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,6 +19,7 @@
         app:layout_constraintVertical_chainStyle="packed"
         />
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/AuthButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/SendButton"
@@ -27,7 +28,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.4"
         android:text="Авторизация"
-        android:id="@+id/AuthButton"
         app:layout_constraintVertical_chainStyle="packed"
         />
     <com.google.android.material.button.MaterialButton
@@ -48,11 +48,26 @@
         android:layout_height="wrap_content"
         app:layout_constraintWidth_percent="0.4"
         app:layout_constraintTop_toBottomOf="@id/CreateProfileButton"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/EmailEditText"
+        android:hint="21345"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/EmailCodeEditText"
         android:inputType="number"
+        app:layout_constraintVertical_chainStyle="packed"
+        />
+
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintTop_toBottomOf="@id/EmailCodeEditText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="example@ex.ex"
+        android:id="@+id/EmailEditText"
+        android:inputType="textEmailAddress"
         app:layout_constraintVertical_chainStyle="packed"
         />
 
